Revert "Changed background image"
This reverts commit 2b77e0f07480a6762a1687e31db1112092a1b208.

--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
 			<!-- Banner -->
 				<section id="banner">
 					<h2>South Korea</h2>
-					<p>Fun info about South Korea by Jay Han.</p>
+					<p>Fun info about South Korea. by Jay Han.</p>
 					<ul class="actions">
-						<li><a href="https://www.koreanair.com/global/en.html">Korea</a></li>
-						<li><a href="http://www.naver.com/" class="button">NAVER</a></li>
+						<li><a href="#" class="button special">Korea</a></li>
+						<li><a href="naver.com" class="button">NAVER</a></li>
 					</ul>
 				</section>
 
@@ -61,7 +61,7 @@
 						<header class="major">
 							<h2>Introducing the cultures about South Korea
 							</h2>
-							<p>dfgfdsdfg<br />
+							<p>Blandit varius ut praesent nascetur eu penatibus nisi risus faucibus nunc ornare<br />
 							adipiscing nunc adipiscing. Condimentum turpis massa.</p>
 						</header>
 						<span class="image featured"><img src="images/pic01.jpg" alt="" /></span>
@@ -112,7 +112,7 @@
 							<section class="box special">
 								<span class="image featured"><img src="images/pic03.jpg" alt="" /></span>
 								<h3>Accumsan integer</h3>
-								<p>J1234rdsasfgtrewsr32q</p>
+								<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
 								<ul class="actions">
 									<li><a href="#" class="button alt">Learn More</a></li>
 								</ul>
@@ -127,7 +127,7 @@
 				<section id="cta">
 
 					<h2>Sign up for beta access</h2>
-					<p>asdfdsasdfg</p>
+					<p>Blandit varius ut praesent nascetur eu penatibus nisi risus faucibus nunc.</p>
 
 					<form>
 						<div class="row uniform 50%">
