--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
 
 			<!-- Header -->
 				<header id="header" class="alt">
-					<h1><a href="index.html">Alpha</a> by HTML5 UP</h1>
+					<h1><a href="index.html">Alpha</a> by Jay Han</h1>
 					<nav id="nav">
 						<ul>
 							<li><a href="index.html">Home</a></li>
 							<li>
-								<a href="#" class="icon fa-angle-down">Layouts</a>
+								<a href="#" class="icon fa-angle-down">More</a>
 								<ul>
-									<li><a href="generic.html">Generic</a></li>
-									<li><a href="contact.html">Contact</a></li>
-									<li><a href="elements.html">Elements</a></li>
+									<li><a href="generic.html">Population</a></li>
+									<li><a href="contact.html">GDP</a></li>
+									<li><a href="elements.html">Life Index</a></li>
 									<li>
 										<a href="#">Submenu</a>
 										<ul>
@@ -47,10 +47,10 @@
 			<!-- Banner -->
 				<section id="banner">
 					<h2>South Korea</h2>
-					<p>Fun info about South Korea. by Jay Han.</p>
+					<p>Fun info about South Korea</p>
 					<ul class="actions">
-						<li><a href="#" class="button special">Korea</a></li>
-						<li><a href="naver.com" class="button">NAVER</a></li>
+						<li><a href="http://english.visitkorea.or.kr/enu/index.kto" class="button special">Imagine your Korea</a></li>
+						<li><a href="http://english.visitkorea.or.kr/enu/AK/AK_EN_1_4_5.jsp" class="button">Information about Korea</a></li>
 					</ul>
 				</section>
 
@@ -61,35 +61,34 @@
 						<header class="major">
 							<h2>Introducing the cultures about South Korea
 							</h2>
-							<p>Blandit varius ut praesent nascetur eu penatibus nisi risus faucibus nunc ornare<br />
-							adipiscing nunc adipiscing. Condimentum turpis massa.</p>
+							<p>South Korea, officially the Republic of Korea, and commonly referred to as Korea, is a sovereign state in East Asia, constituting the southern part of the Korean Peninsula. The name Korea is derived from the ancient Kingdom of Goguryeo, also known as Koryŏ. It shares land borders with North Korea to the north, and oversea borders with Japan to the east and China to the west. Roughly half of the country's 51 million people reside in the Seoul Capital Area, the second largest in the world with over 25 million residents.</p>
 						</header>
-						<span class="image featured"><img src="images/pic01.jpg" alt="" /></span>
+						<span class="image featured"><img src="images/Korea-national-flower.jpg" alt="" /></span>
 					</section>
 
 					<section class="box special features">
 						<div class="features-row">
 							<section>
 								<span class="icon major fa-bolt accent2"></span>
-								<h3>Magna etiam</h3>
-								<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
+								<h3>Population</h3>
+								<p>A variety of different Asian peoples had migrated to the Korean Peninsula in past centuries, very few have remained permanently, so by 1990 both South Korea and North Korea were among the world's most ethnically homogeneous nations. The number of indigenous minorities was negligible. In South Korea, people of foreign origin, including Chinese, Japanese, Westerners, Southeast Asians, South Asians, and others were a small percentage of the population whose residence was generally temporary.</p>
 							</section>
 							<section>
 								<span class="icon major fa-area-chart accent3"></span>
-								<h3>Ipsum dolor</h3>
-								<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
+								<h3>GDP</h3>
+								<p>The Gross Domestic Product per capita in South Korea was last recorded at 24565.56 US dollars in 2014. The GDP per Capita in South Korea is equivalent to 195 percent of the world's average. GDP per capita in South Korea averaged 9387.78 USD from 1960 until 2014, reaching an all time high of 24565.56 USD in 2014 and a record low of 1106.76 USD in 1960. GDP per capita in South Korea is reported by the World Bank.</p>
 							</section>
 						</div>
 						<div class="features-row">
 							<section>
 								<span class="icon major fa-cloud accent4"></span>
-								<h3>Sed feugiat</h3>
-								<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
+								<h3>Life Index</h3>
+								<p>Korea performs well in some measures of well-being in the Better Life Index. Korea ranks above the average in civic engagement, education and skills, personal security, jobs and earnings, but below average in income and wealth, subjective well-being, environmental quality, health status, social connections, and work-life balance.</p>
 							</section>
 							<section>
 								<span class="icon major fa-lock accent5"></span>
-								<h3>Enim phasellus</h3>
-								<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
+								<h3>Korea's Politics</h3>
+								<p>Politics of the Republic of Korea takes place in the framework of a presidential representative democratic republic, whereby the President is the head of state, and of a multi-party system. Executive power is exercised by the government. Legislative power is vested in both the government and the National Assembly. </p>
 							</section>
 						</div>
 					</section>
@@ -98,11 +97,11 @@
 						<div class="6u 12u(narrower)">
 
 							<section class="box special">
-								<span class="image featured"><img src="images/pic02.jpg" alt="" /></span>
-								<h3>Sed lorem adipiscing</h3>
-								<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
+								<span class="image featured"><img src="images/Piano-steinway-sons.jpg" alt="" /></span>
+								<h3>South Korea's Pianist</h3>
+								<p>SeongJin Cho is a South Korean pianist. He won the XVII International Chopin Piano Competition. He has won the International Fryderyk Chopin Competition for Young Pianists (2008) and a piano competition in Hamamatsu, Japan (2009), as well as Third Prize in the International Tchaikovsky Competition in Russia (2011) and the Arthur Rubinstein in Tel Aviv (2014).</p>
 								<ul class="actions">
-									<li><a href="#" class="button alt">Learn More</a></li>
+									<li><a href="https://youtu.be/614oSsDS734?list=RDd3IKMiv8AHw" class="button alt">Piano Competition Concert</a></li>
 								</ul>
 							</section>
 
@@ -110,11 +109,11 @@
 						<div class="6u 12u(narrower)">
 
 							<section class="box special">
-								<span class="image featured"><img src="images/pic03.jpg" alt="" /></span>
-								<h3>Accumsan integer</h3>
-								<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
+								<span class="image featured"><img src="images/Bunker-hill-green.jpg" alt="" /></span>
+								<h3>South Korea's Pro-Golfer</h3>
+								<p>Inbee Park is a South Korean professional golfer who plays on the LPGA Tour and the LPGA of Japan Tour. From 15 April 2013 to 1 June 2014, she was the number one ranked player in the Women's World Golf Rankings.</p>
 								<ul class="actions">
-									<li><a href="#" class="button alt">Learn More</a></li>
+									<li><a href="http://www.hani.co.kr/arti/sports/golf/717601.html" class="button alt">Inbee Park's Golf Empress</a></li>
 								</ul>
 							</section>
 
