Made new changes

--- a/generic.html
+++ b/generic.html
@@ -52,16 +52,16 @@
 					</header>
 					<div class="box">
 						<span class="image featured"><img src="images/South-korea-2.jpg" alt="" /></span>
-						<h3>This is a subheading</h3>
-						<p>Cep risus aliquam gravida cep ut lacus amet. Adipiscing faucibus nunc placerat. Tempus adipiscing turpis non blandit accumsan eget lacinia nunc integer interdum amet aliquam ut orci non col ut ut praesent. Semper amet interdum mi. Phasellus enim laoreet ac ac commodo faucibus faucibus. Curae ante vestibulum ante. Blandit. Ante accumsan nisi eu placerat gravida placerat adipiscing in risus fusce vitae ac mi accumsan nunc in accumsan tempor blandit aliquet aliquet lobortis. Ultricies blandit lobortis praesent turpis. Adipiscing accumsan adipiscing adipiscing ac lacinia cep. Orci blandit a iaculis adipiscing ac. Vivamus ornare laoreet odio vis praesent nunc lorem mi. Erat. Tempus sem faucibus ac id. Vis in blandit. Nascetur ultricies blandit ac. Arcu aliquam. Accumsan mi eget adipiscing nulla. Non vestibulum ac interdum condimentum semper commodo massa arcu.</p>
+						<h3>The People's Nation of Great Han </h3>
+						<p>The name Korea is derived from the ancient Kingdom of Goguryeo, also known as Koryŏ. Highly urbanized at 92%, South Koreans lead a distinctive urban lifestyle with half of them living in the Seoul Capital Area, the world's second largest city with over 25 million residents and a leading global city with the fourth largest economy, rated in 2016 as the world's most livable megacity and safest city to live in.</p>
 						<div class="row">
 							<div class="6u 12u(mobilep)">
-								<h3>And now a subheading</h3>
-								<p>Adipiscing faucibus nunc placerat. Tempus adipiscing turpis non blandit accumsan eget lacinia nunc integer interdum amet aliquam ut orci non col ut ut praesent. Semper amet interdum mi. Phasellus enim laoreet ac ac commodo faucibus faucibus. Curae lorem ipsum adipiscing ac. Vivamus ornare laoreet odio vis praesent.</p>
+								<h3>Nation of South Korea</h3>
+								<p>South Korea, an East Asian nation on the southern half of the Korean Peninsula, shares one of the world’s most heavily militarized borders with North Korea. It’s equally known for its green, hilly countryside dotted with cherry trees and centuries-old Buddhist temples, plus its coastal fishing villages, tropical islands and high-tech cities such as Seoul, the capital.</p>
 							</div>
 							<div class="6u 12u(mobilep)">
-								<h3>And another subheading</h3>
-								<p>Adipiscing faucibus nunc placerat. Tempus adipiscing turpis non blandit accumsan eget lacinia nunc integer interdum amet aliquam ut orci non col ut ut praesent. Semper amet interdum mi. Phasellus enim laoreet ac ac commodo faucibus faucibus. Curae lorem ipsum adipiscing ac. Vivamus ornare laoreet odio vis praesent.</p>
+								<h3>Korean Civilization</h3>
+								<p>Inhabited half a million years ago, the Korean civilization began with Gojoseon, with Korean pottery dating to 8000 BC. Around 1st century BC, three Korean kingdoms flourished, the largest being Goguryeo that ruled Northeast China, parts of Russia and Inner Mongolia under Gwanggaeto the Great. Since their unification into Silla and Balhae in the 7th century, Korea enjoyed over a millennium of relative tranquility under dynasties lasting for centuries with innovations like Hangul, the unique alphabet promulgated by Sejong the Great in 1446 that enabled anyone to easily learn to read and write.</p>
 							</div>
 						</div>
 					</div>
